@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 0359323771076869a5b6df141a8f3ec6a18e623b ChangeLog
+SHA1 d09990abc1ce05f60b47a7952bfd9b92cb1391e6 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 f6bb4d45dad618f00163aa83b02c30b72a1ca26e META.yml
-SHA1 d62b58116a38d2cdb1013c5eac2fa68b2032f503 MYMETA.json
-SHA1 8999d5348e629fdd3e93ef386abc4ca2434f6e76 MYMETA.yml
-SHA1 dd3d04a0317f98f762bb5cca99560f42f457b622 Makefile.PL
+SHA1 d82cb35b08e1250740e030fc67175f674fca4060 META.yml
+SHA1 ceae9d92398ff8489c2c35c063ee7edf06b5855a MYMETA.json
+SHA1 5a9f7b84093c9db9545913cc825b3461014f038e MYMETA.yml
+SHA1 9f9e168127061e34c2fb5a364376eec8415d2e25 Makefile.PL
 SHA1 3963e2adaaaf4dabdd2d22748334db30cefedb97 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 c5096f77f7afdbddd504bb1f7b70e192a0700c4f bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 213af1b9c4d9ff005eec1ef0635bd991068f5ff1 lib/Net/FullAuto.pm
+SHA1 f0338808a2bc2d186c0e2e27fad7457f67a334dc lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,11 +56,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJSmNBPAAoJEBa/9Pad787EExMIAJLPeEka/U1f4dNpTrzhuPKy
-ioMkvdq80Crnwto/VOzxvOXjjJjz26fUVs5GNw8nsQEHZZqxphOca8Fr3weN2dB1
-rg0Tz0mVY3zIgn1KRaHEJEeZIqq8x4PtDTIhev4vVVTg4A8rI8yH8xK0b2vcs7gh
-Tm5Jt+Fpk66kWSM6QY5AunOJ4bf1zLPmIHFhT3jbF2SuNXWP8WLP1c6XAKF2zw0i
-YJKLr37LCHuRIItUXniRsqDBjMulQQMyQS1u9+l3AF+JZm+tWnmhoNckOtOG10cB
-8iGPt4SeCrVu9YA/f8bgXitK1FQUNU7Jjwgf46560ELheIW/JsGwEHvosj1YYc8=
-=AjfC
+iQEcBAEBAgAGBQJSmN9tAAoJEBa/9Pad787ENiwH+QFNYIXNDsT1M8ImeMga0o1x
+cAL5mPqsB5vzlQZXsYbmYxZ1EC71TMhfzJxEekcGaWw6jN7LzDpa5/KyoiZp4wK1
+7nZXBILFaer/UiDJP6y/dXuKm56YA9JfopEJPyc9vUe39Q4i8hX/8k8oXFlp8jfm
+6QngooJc7PnwytvboNK/jfTdg45NVcvpWlFPwVh9dk8m5/zDGsoAnj/hTSUlUqgX
+clvJF5fM7O0tHn+d6MJi3KLlitdXl6yV+g8Z7QWfmpkLZmiU+nFvjhpbfcC/laTE
+llchQ0c/E+pn+TNENWWqZM3NVgoq8H+ebpAzRpMZ2/piVzOrbqG8vPJDcylLzzU=
+=du/9
 -----END PGP SIGNATURE-----
